--- a/style.css
+++ b/style.css
@@ -10,14 +10,9 @@ ul,li {
     padding-left: 10px;
 }
 
-/* 
-.container {
-    width: 70%;
-}
- */
 
-body {
-    width: 100%;
+.container {
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -35,62 +30,134 @@ header {
     border: 2px dotted black;
     margin: 10px 0;
     width: 70%;
+    padding: 3px;
+    
+}
+/* header finito */
+
+.hero-section {
+    background-color: beige;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.hero-content {
+    width: 55%;
+    background-color: aqua;
+    height: 200px;
+    margin: 0 auto;
+    border: 2px dotted black;
+}
+/* seconda e quarta section */
+
+.features-section {
+    padding: 30px 0;
+    background-color: rgb(10, 97, 29);
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.features-content {
+    width: 70%;
+    background-color: aquamarine;
+    height: 250px;
+    display: flex;
+}
+
+.feature-item-1 {
+    flex-basis: 60%;
+    background-color: beige;
+    border: 2px dotted;
+}
+
+.feature-item-2 {
+    flex-basis: 40%;
+    background-color: rgb(39, 39, 12);
+    border: 2px dotted;
+}
+
+/* terza section */
+
+.features-section2 {
+    padding: 30px 0;
+    background-color: rgb(136, 27, 127);
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.features-content {
+    width: 70%;
+    background-color: aquamarine;
+    height: 250px;
+    display: flex;
+}
+
+.feature-item-3 {
+    flex-basis: 40%;
+    background-color: rgb(60, 7, 149);
+    border: 2px dotted;
+}
+
+.feature-item-4 {
+    flex-basis: 60%;
+    background-color: rgb(233, 233, 43);
+    border: 2px dotted;
+}
+/* penultima section */
+
+.box-gray {
+    background-color: gray;
+    display: flex;
+    padding: 30px 0;
+}
+
+.box-gray-inside {
+    background-color: greenyellow;
+    height: 500px;
+    flex-basis: 70%;
+    margin: 0 auto;
+    border: 4px dotted black;
+}
+
+/* footer */
+.pie-di-pagina {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+.foot-container {
+    background-color: yellow;
+    min-height: 300px;
+    flex-basis: 70%;
+    border: 5px dotted white;
+    display: flex;
+    margin: 20px 0;
+}
+
+.left-box {
+    flex-basis: calc((100 / 4) *12);
+    background-color: brown;
+    height: 100%;
+    display: flex;
+}
+
+.right-box {
     
 }
 
-.boxlink {
-    display: flex;
-    justify-content: center;
+.col-4 {
+    flex-basis: calc((100% / 12) * 4);
 }
 
-.section-1 {
-    background-color: blue;
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
-}
-
-.container-section-1 {
-    height: 200px;
-    width: 50%;
-    background-color: orange;
-    margin: 10px 100px;
-}
-
-.section-2 {
-    background-color: rgb(225, 171, 99);
-    display: flex;
-    max-width: 70%;
-    margin: 0 auto;
-    padding: 10px 0;
-}
-
-.box {
-    height: 200px;
-    padding: 20px;
-    border: 3px dotted black;
-}
-
-.box1 {
-    width: calc((100% / 12) * 4);
-    background-color: aqua;
-}
-
-.box2 {
-    width: calc((100% / 12) * 8);
-    background-color: fuchsia;
-}
-
-.gray-box {
-    background-color: gray;
-    width: 100%;
-    display: flex;
-}
-
-.green-box {
-    height: 400px;
-    width: 70%;
-    background-color: green;
-    padding: 20px 0;
-    justify-content: flex-start;
+.col-8 {
+    flex-basis: calc((100% / 12) * 8);
 }
